--- a/.env
+++ b/.env
@@ -7,12 +7,13 @@ APP_URL=http://lab02.test
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=lab02
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=103.76.181.245
+#DB_HOST=localhost
+DB_PORT=5432
+DB_DATABASE=lab01
+DB_USERNAME=postgres
+DB_PASSWORD=p4886587
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
